admin/kubernetes/k8s_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hsds
  name: hsds
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hsds
  template:
    metadata:
      labels:
        app: hsds
    spec:
      containers:
        -
          name: sn
          image: "hsds"
          imagePullPolicy: Never
          ports:
            -
              containerPort: 5101
        -
          name: dn
          image: "hsds"
          lifecycle:
            preStop:
              exec:
                command: ["/usr/bin/curl", "-X", "DELETE", "http://127.0.0.1:6101/prestop"]
          imagePullPolicy: Never
          ports:
            -
              containerPort: 6101
