admin/kubernetes/k8s_deployment_aws_singleton.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hsds
  name: hsds
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hsds
  template:
    metadata:
      labels:
        app: hsds
    spec:
      containers:
        -
          name: head
          image: "hdfgroup/hsds:v0.7.0beta6"
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "512M"
            limits:
              memory: "512M"
          volumeMounts:
          - name: config
            mountPath: "/config"
          ports:
            -
              containerPort: 5100
        -
          name: sn
          image: "hdfgroup/hsds:v0.7.0beta6"
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "1G"
            limits:
              memory: "1G"
          volumeMounts:
          - name: accounts
            mountPath: "/config/passwd.txt"
            subPath: passwd.txt
          - name: config
            mountPath: "/config"
          ports:
            -
              containerPort: 5101
        -
          name: dn1
          image: "hdfgroup/hsds:v0.7.0beta6"
          lifecycle:
            preStop:
              exec:
                command: ["/sbin/killall5", "-15"]
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "2G"
            limits:
              memory: "2G"
          volumeMounts:
          - name: config
            mountPath: "/config"
          ports:
            -
              containerPort: 6101
        -
          name: dn2
          image: "hdfgroup/hsds:v0.7.0beta6"
          lifecycle:
            preStop:
              exec:
                command: ["/sbin/killall5", "-15"]
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "2G"
            limits:
              memory: "2G"
          volumeMounts:
          - name: config
            mountPath: "/config"
          ports:
            -
              containerPort: 6102
        -
          name: dn3
          image: "hdfgroup/hsds:v0.7.0beta6"
          lifecycle:
            preStop:
              exec:
                command: ["/sbin/killall5", "-15"]
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "2G"
            limits:
              memory: "2G"
          volumeMounts:
          - name: config
            mountPath: "/config"
          ports:
            -
              containerPort: 6103
        -
          name: dn4
          image: "hdfgroup/hsds:v0.7.0beta6"
          lifecycle:
            preStop:
              exec:
                command: ["/sbin/killall5", "-15"]
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "2G"
            limits:
              memory: "2G"
          volumeMounts:
          - name: config
            mountPath: "/config"
          ports:
            -
              containerPort: 6104
        -
          name: rangeget
          image: "hdfgroup/hsds:v0.7.0beta6"
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "2G"
            limits:
              memory: "2G"
          volumeMounts:
          - name: config
            mountPath: "/config"
          ports:
            -
              containerPort: 6900
      volumes:
      - name: accounts
        secret:
          secretName: user-password
      - name: config
        configMap:
          name: hsds-config
