admin/kubernetes/k8s_service_lb.yml
apiVersion: v1
kind: Service
metadata:
  name: hsds
  labels:
    app: hsds
  annotations:
    # Note that the backend talks over HTTP.
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: http
    # Incudes ARN of the certificate.
    #service.beta.kubernetes.io/aws-load-balancer-ssl-cert: arn:aws:acm:us-west-2:1234567:certificate/abcdefgh-85ca-42ab-a5f3-8761a8dfe77d
    # Only run SSL on the port named "https" below.
    #service.beta.kubernetes.io/aws-load-balancer-ssl-ports: "https"
spec:
  selector:
    app: hsds
  type: LoadBalancer
  ports:
  - name: http
    port: 80
    targetPort: 5101
  - name: https
    port: 443
    targetPort: 5101
