admin/kubernetes/k8s_service_lb_azure.yml
apiVersion: v1
kind: Service
metadata:
  name: hsds
  labels:
    app: hsds
spec:
  selector:
    app: hsds
  type: LoadBalancer
  ports:
  - name: http
    port: 80
    targetPort: 5101
